# MCPReplPlex.jl

./: .gitignore  Project.toml  README.md  julia-repl-mcp.py  mcp-julia-adapter  pyproject.toml  requirements.txt
src/: MCPMultiplexer.jl  MCPPlex.jl  MCPRepl.jl  MCPServer.jl  setup.jl
test/: runtests.jl
